Update Capstone - Automatic Ticket Assignment.ipynb

--- a/Capstone - Automatic Ticket Assignment.ipynb
+++ b/Capstone - Automatic Ticket Assignment.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The goal of the project is to automatically classify ticket by analysing the textual data of the incident tckets raised in a company. The target column is the assignment group to which the ticket should be raised towards.\n",
+    "### The goal of the project is to automatically classify ticket by analysing the textual data of the incident tickets raised in a company. The target column is the assignment group to which the ticket should be raised towards.\n",
     "\n",
     "### Steps :\n",
     "    1. EDA - Exploratory Data Analysis\n",
